second page added

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <section id="first-page">
         <header>
-            <button id="logo" class="btn"><svg xmlns:xlink="http://www.w3.org/1999/xlink" class="tds-icon tds-icon-logo-wordmark tds-site-logo-icon" viewBox="0 0 342 35" xmlns="http://www.w3.org/2000/svg" width="342"  height="35" ><path d="M0 .1a9.7 9.7 0 007 7h11l.5.1v27.6h6.8V7.3L26 7h11a9.8 9.8 0 007-7H0zm238.6 0h-6.8v34.8H263a9.7 9.7 0 006-6.8h-30.3V0zm-52.3 6.8c3.6-1 6.6-3.8 7.4-6.9l-38.1.1v20.6h31.1v7.2h-24.4a13.6 13.6 0 00-8.7 7h39.9v-21h-31.2v-7h24zm116.2 28h6.7v-14h24.6v14h6.7v-21h-38zM85.3 7h26a9.6 9.6 0 007.1-7H78.3a9.6 9.6 0 007 7zm0 13.8h26a9.6 9.6 0 007.1-7H78.3a9.6 9.6 0 007 7zm0 14.1h26a9.6 9.6 0 007.1-7H78.3a9.6 9.6 0 007 7zM308.5 7h26a9.6 9.6 0 007-7h-40a9.6 9.6 0 007 7z" fill="#FFFFFF"></path></svg></button>
+            <button id="logo" class="btn"><svg class="tds-icon tds-icon-logo-wordmark tds-site-logo-icon" viewBox="0 0 342 35" xmlns="http://www.w3.org/2000/svg"><path d="M0 .1a9.7 9.7 0 007 7h11l.5.1v27.6h6.8V7.3L26 7h11a9.8 9.8 0 007-7H0zm238.6 0h-6.8v34.8H263a9.7 9.7 0 006-6.8h-30.3V0zm-52.3 6.8c3.6-1 6.6-3.8 7.4-6.9l-38.1.1v20.6h31.1v7.2h-24.4a13.6 13.6 0 00-8.7 7h39.9v-21h-31.2v-7h24zm116.2 28h6.7v-14h24.6v14h6.7v-21h-38zM85.3 7h26a9.6 9.6 0 007.1-7H78.3a9.6 9.6 0 007 7zm0 13.8h26a9.6 9.6 0 007.1-7H78.3a9.6 9.6 0 007 7zm0 14.1h26a9.6 9.6 0 007.1-7H78.3a9.6 9.6 0 007 7zM308.5 7h26a9.6 9.6 0 007-7h-40a9.6 9.6 0 007 7z" fill="currentColor"></path></svg></button>
             <ul id="main-nav" class="nav">
                 <li>
                     <button class="btn nav-btn">Model S</button>
@@ -53,6 +53,9 @@
                 <!-- delete span -->
                 <div class="first-box box">
                     <!-- svg -->
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 28 14" class="tcl-badge-speedometer__inner-circle" fill="var(--tds-color--secondary)">
+                        <path d="M 28,14 H 0 C 0,6.2697403 6.2698076,0 14.000646,0 21.730623,0 28,6.2697403 28,14 Z"></path>
+                      </svg>
                     <h2><span class="big-font">3.1</span> s</h2>
                     <p>0-60 mph*</p>
                 </div>
@@ -65,13 +68,42 @@
                     <p>Dual Motor</p>
                 </div>
                 <div class="fourth-box box">
-                    <button class="order-btn btn">order now</button>
+                    <button class="order-btn-primary order-btn btn">order now</button>
                 </div>
             </div>
         </main>
         <footer>
             <button><i class="fa-solid fa-angle-down"></i></button>
         </footer>
+    </section>
+    <section id="second-page">
+        <main>
+
+        </main>
+        <article>
+            <div id="top">
+                <p>Safety</p>
+                <h1>Build for Saftey</h1>
+                <p>Saftey is the most important part of every Tesla. We design our vehicles to <a class="links" href="#">exceed safety standarts.</a> </p>
+                <br>
+                <p> <span id="bold"> 5-star Rating </span> </p>
+                <p> Model 3 achieved NHTSA 5-star safety ratings in every category and subcategory.</p>
+                <br>
+                <p> <span id="bold"> Top Safety Pick+ </span> </p>
+                <p> Model 3 received the IIHS Top Safety Pick+ award, with top ratings in all crashworthiness and front crash prevention categories.</p>
+            </div>
+            <div id="bottom">
+                <div class="box">
+                    <button id="learn-more" class="btn">+</button>
+                </div>
+                <div class="box">
+                    <p>LEARN MORE</p>                
+                </div>
+                <div class="box">
+                    <button class="order-btn-secondary order-btn btn">order now</button>
+                </div>
+            </div>
+        </article>
     </section>
 </body>
 </html>
