--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                         </svg>
                     </div>
                     <div class="barometer-words">
-                        <h2><span class="big-font">3.1</span> s</h2>
+                        <h2>3.1 s</h2>
                         <p>0-60 mph*</p>
                     </div>
                 </div>
@@ -76,7 +76,7 @@
                     <h2><span class="big-font">AWD</span></h2>
                     <p>Dual Motor</p>
                 </div>
-                <div class="fourth-box box">
+                <div class="fourth-box box-2">
                     <button class="order-btn-primary order-btn btn">order now</button>
                 </div>
             </div>
@@ -108,7 +108,7 @@
                 <div class="box-2">
                     <p>LEARN MORE</p>                
                 </div>
-                <div class="box-2">
+                <div class="box-2 box-order-btn">
                     <button class="order-btn-secondary order-btn btn">order now</button>
                 </div>
             </div>
@@ -117,7 +117,6 @@
     <section id="third-page">
         <main>
             <div id="detailes">
-                <!-- delete span -->
                 <div class="first-box box">
                     <div class="svg-barometer">
                         <svg xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40 21" class="tcl-badge-speedometer__outer-circle" fill="white" width="40"  height="21" >
@@ -132,16 +131,16 @@
                     </div>
                     <div class="barometer-words">
                         <h2>3.1 s</h2>
-                        <p>0-60 mph*</p>
+                        <p>Quickest acceleration—from zero to 60 mph* in as little as 3.1 seconds</p>
                     </div>
                 </div>
                 <div class="second-box box">
-                    <h2><span class="big-font">358</span> mi</h2>
-                    <p>Range (EPA est.)</p>
+                    <h2>162 mph</h2>
+                    <p>Improved handling and aerodynamics allow for a top speed of 162 mph</p>
                 </div>
                 <div class="third-box box">
-                    <h2><span class="big-font">AWD</span></h2>
-                    <p>Dual Motor</p>
+                    <h2>AWD</h2>
+                    <p>Dual Motor All-Wheel Drive instantly controls traction and torque, in all weather conditions</p>
                 </div>
         </main>
         <footer>
